--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,16 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" id="WebApp_ID" version="3.1">
-  <display-name>demo</display-name>
+  <display-name>wushu</display-name>
   <welcome-file-list>
-    <welcome-file>/test/test.jsp</welcome-file>
+    <welcome-file>/admin/login.jsp</welcome-file>
   </welcome-file-list>
   
- <filter>
-    <filter-name>StrutsPrepareAndExecuteFilter</filter-name>
+  <filter>
+    <filter-name>struts</filter-name>
     <filter-class>org.apache.struts2.dispatcher.ng.filter.StrutsPrepareAndExecuteFilter</filter-class>
   </filter>
   <filter-mapping>
-    <filter-name>StrutsPrepareAndExecuteFilter</filter-name>
+    <filter-name>struts</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
+  <filter-mapping>
+    <filter-name>struts</filter-name>
     <url-pattern>*.action</url-pattern>
   </filter-mapping>
+  
 </web-app>
