--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,11 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" id="WebApp_ID" version="3.1">
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" version="3.1">
+  <display-name>WushuManageSystem</display-name>
   <display-name>wushu</display-name>
   <welcome-file-list>
     <welcome-file>/admin/login.jsp</welcome-file>
   </welcome-file-list>
   
-  <filter>
+  <servlet>
+  	<servlet-name>ServletTest</servlet-name>
+  	<servlet-class>com.pan.competition.servlet.ServletTest</servlet-class>
+  </servlet>
+  
+  <servlet-mapping>
+  	<servlet-name>ServletTest</servlet-name>
+  	<url-pattern>/ServletTest</url-pattern>
+  </servlet-mapping>
+  
+  <!-- <filter>
     <filter-name>struts</filter-name>
     <filter-class>org.apache.struts2.dispatcher.ng.filter.StrutsPrepareAndExecuteFilter</filter-class>
   </filter>
@@ -16,6 +27,5 @@
   <filter-mapping>
     <filter-name>struts</filter-name>
     <url-pattern>*.action</url-pattern>
-  </filter-mapping>
-  
+  </filter-mapping> -->
 </web-app>
