--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -5,27 +5,20 @@
   <welcome-file-list>
     <welcome-file>/admin/login.jsp</welcome-file>
   </welcome-file-list>
-  
   <servlet>
-  	<servlet-name>LoginServlet</servlet-name>
-  	<servlet-class>com.pan.competition.servlet.LoginServlet</servlet-class>
+    <servlet-name>LoginServlet</servlet-name>
+    <servlet-class>com.pan.competition.servlet.LoginServlet</servlet-class>
   </servlet>
-  
   <servlet-mapping>
-  	<servlet-name>LoginServlet</servlet-name>
-  	<url-pattern>/servlet/LoginServlet</url-pattern>
+    <servlet-name>LoginServlet</servlet-name>
+    <url-pattern>/servlet/LoginServlet</url-pattern>
   </servlet-mapping>
-  
-  <!-- <filter>
-    <filter-name>struts</filter-name>
-    <filter-class>org.apache.struts2.dispatcher.ng.filter.StrutsPrepareAndExecuteFilter</filter-class>
-  </filter>
-  <filter-mapping>
-    <filter-name>struts</filter-name>
-    <url-pattern>/*</url-pattern>
-  </filter-mapping>
-  <filter-mapping>
-    <filter-name>struts</filter-name>
-    <url-pattern>*.action</url-pattern>
-  </filter-mapping> -->
+  <servlet>
+    <servlet-name>CompetitionServlet</servlet-name>
+    <servlet-class>com.pan.competition.servlet.CompetitionServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>CompetitionServlet</servlet-name>
+    <url-pattern>/servlet/CompetitionServlet</url-pattern>
+  </servlet-mapping>
 </web-app>
