--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -29,4 +29,12 @@
     <servlet-name>EventServlet</servlet-name>
     <url-pattern>/servlet/EventServlet</url-pattern>
   </servlet-mapping>
+  <servlet>
+    <servlet-name>StageServlet</servlet-name>
+    <servlet-class>com.pan.competition.servlet.StageServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>StageServlet</servlet-name>
+    <url-pattern>/servlet/StageServlet</url-pattern>
+  </servlet-mapping>
 </web-app>
