--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -69,4 +69,12 @@
     <servlet-name>GroupServlet</servlet-name>
     <url-pattern>/servlet/GroupServlet</url-pattern>
   </servlet-mapping>
+  <servlet>
+    <servlet-name>MatchServlet</servlet-name>
+    <servlet-class>com.pan.competition.servlet.MatchServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>MatchServlet</servlet-name>
+    <url-pattern>/servlet/MatchServlet</url-pattern>
+  </servlet-mapping>
 </web-app>
