2018/5/24 log:报表下载完成

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -85,4 +85,12 @@
     <servlet-name>JudgeServlet</servlet-name>
     <url-pattern>/servlet/JudgeServlet</url-pattern>
   </servlet-mapping>
+  <servlet>
+    <servlet-name>ReportServlet</servlet-name>
+    <servlet-class>com.pan.competition.servlet.ReportServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ReportServlet</servlet-name>
+    <url-pattern>/servlet/ReportServlet</url-pattern>
+  </servlet-mapping>
 </web-app>
