--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,10 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" version="3.1">
   <display-name>WushuManageSystem</display-name>
-  <display-name>wushu</display-name>
   <welcome-file-list>
-    <welcome-file>/admin/login.jsp</welcome-file>
+    <welcome-file>/login.jsp</welcome-file>
   </welcome-file-list>
+  <filter>
+    <filter-name>privilegeFilter</filter-name>
+    <filter-class>com.pan.competition.filter.PrivilegeFilter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>privilegeFilter</filter-name>
+    <url-pattern>/admin/*</url-pattern>
+  </filter-mapping>
   <servlet>
     <servlet-name>LoginServlet</servlet-name>
     <servlet-class>com.pan.competition.servlet.LoginServlet</servlet-class>
@@ -92,5 +99,13 @@
   <servlet-mapping>
     <servlet-name>ReportServlet</servlet-name>
     <url-pattern>/servlet/ReportServlet</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <servlet-name>ActiveServlet</servlet-name>
+    <servlet-class>com.pan.competition.servlet.ActiveServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ActiveServlet</servlet-name>
+    <url-pattern>/servlet/ActiveServlet</url-pattern>
   </servlet-mapping>
 </web-app>
